--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         // --- УТИЛИТЫ API ---
 
         function fetchApi(action, method = 'GET', data = null) {
-            let url = 'https://script.google.com/macros/s/AKfycbxxJkS3rYWsZxBKjxJUvjwC2f_4Qdvonc2dkQN3I0WqqoBQ7zMGUIFAngB1RWwJUXS6/exec';
+            let url = APPS_SCRIPT_URL;
             
             // ИСПРАВЛЕНО: Используем MainButton для прогресса
             tg.MainButton.showProgress(false);
@@ -511,5 +511,6 @@
     </script>
 </body>
 </html>
+
 
 
